Add javascript which disable editing time unless manual time settings is choosen.

--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -1,4 +1,5 @@
-<% if @permissions %>  
+<% if @permissions %>
+  <% disabled = ! @permissions[:write] %>
 
   <% content_for :head do %>
     <%= javascript_include_tag :defaults %>
@@ -25,9 +26,22 @@
       return true;
       };
     <% end -%>
+    <% javascript_tag do -%>
+      function enable() {
+        if ( !<%= disabled %> ){
+          $("#date_date")[0].disabled = false;
+          $("#currenttime")[0].disabled = false;
+        }
+      };
+      function disable() {
+          $("#date_date")[0].disabled = true;
+          $("#currenttime")[0].disabled = true;
+      }
 
+
+    <% end -%>
   <% end %>
-  <% disabled = ! @permissions[:write] %>
+  
 
   <div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/></div>
   <div class='plugin-content'>
@@ -67,11 +81,11 @@
       <% end %>
 
       <div>
-        <input type="radio" name="timeconfig" value="none" checked="true"/>
+        <input type="radio" name="timeconfig" value="none" checked="true" onclick="disable();"/>
         <%=_("Don't set time")%>
-        <input type="radio" name="timeconfig" value="manual"/>
+        <input type="radio" name="timeconfig" value="manual" onclick="enable();"/>
         <%=_("Manually configure time")%>
-        <input type="radio" name="timeconfig" value="ntp_sync"/>
+        <input type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"/>
         <%=_("Synchronize via NTP")%>
       </div>
       <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
