--- a/webclient/app/views/shared/backendexception_trap.html.erb
+++ b/webclient/app/views/shared/backendexception_trap.html.erb
@@ -1,7 +1,7 @@
 
 <h1><%= _("This is embarrasing....") %></h1>
 
-<p><%= _("Problem occur on target machine.") %></p>
+<p><%= _("Problem occured on target machine.") %></p>
 
 <h3><%= _("Problem:") %></h3>
 
