make the validation message translatable
- use the same string as in the controller, no need for extra message

--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -29,7 +29,7 @@
       }
 
       return true;
-    }, "Please specify correct email address.");
+    }, "<%= _("Enter a valid e-mail address.") -%>");
 
     $(document).ready(function(){
       $("#adminForm").validate()
