--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -1,5 +1,20 @@
 <div class='plugin-icon'><img src='/icons/yast-mail-server.png'/></div>
 
+<% content_for :head do %>
+  <%= javascript_include_tag :defaults %>
+
+  <style type="text/css">
+    label.error { float: none; color: red; padding-left: .5em; vertical-align: top; }
+  </style>
+
+  <script type="text/javascript">
+     $(document).ready(function(){
+	$("#mailForm").validate()
+     );
+  </script>
+<% end %>
+
+
 <h2><%=_("Mail Settings")%></h2>
 
 <% disabled = ! @permissions[:write] %>
@@ -26,7 +41,7 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Confirm Password")%></strong></td>
-        <td class="last"><%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#administrator_password" %></td>
+        <td class="last"><%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#password" %></td>
     </tr>
     <tr>
     <td><%= form_send_buttons :onclick=>"Element.show('progress')" %></td>
