--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -21,6 +21,43 @@
 //          });
       }
    <% end -%>
+   <% javascript_tag do -%>
+      function validIP(ip) {
+        valid = ip.match(/^\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}$/);
+        return valid;
+      }
+      function validMask(ip) {
+        return validIP(ip); // FIXME
+      }
+      function validPrefix(ip) {
+        return false; //FIXME
+      }
+
+      // FIXME returning false does not prevent it from submitting
+      function validateNetwork() {
+        if ($("#conf_mode")[0].value == "static") {
+          say_bad = "<%= _("Invalid IP address format. The correct one is nnn.nnn.nnn.nnn for nnn between 0 and 255.") %>"
+          if (! validIP($("#ip")[0].value)) {
+            $("#ip").focus();
+            alert (say_bad);
+            return false;
+          }
+          netmask = $("#netmask")[0].value;
+          if (!validPrefix(netmask) && ! validMask(netmask)) {
+            $("#netmask").focus();
+            alert (say_bad);
+            return false;
+          }
+          if (! validIP($("#default_route")[0].value)) {
+            $("#default_route").focus();
+            alert (say_bad);
+            return false;
+          }
+        }
+        Element.show('progress');
+        return true;
+      };
+   <% end %>
 <% end %>
 
 <div class='plugin-icon'><img src='/icons/yast-network.png'/></div>
@@ -106,7 +143,7 @@
     </table>
   </div>
 
-<%= n.submit _("Update"), :disabled => write_disabled %><a href="/" class="button"><%=_("Back")%></a>
+<%= n.submit _("Update"), :disabled => write_disabled, :onclick => "validateNetwork();" %><a href="/" class="button"><%=_("Back")%></a>
 <% end %>
 </div>
 <% javascript_tag do -%>
