--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -10,7 +10,7 @@
   <script type="text/javascript">
      $(document).ready(function(){
 	$("#mailForm").validate()
-     );
+     });
   </script>
 <% end %>
 
@@ -41,7 +41,7 @@
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Confirm Password")%></strong></td>
-        <td class="last"><%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#password" %></td>
+        <td class="last"><%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#mail_settings_password" %></td>
     </tr>
     <tr>
     <td><%= form_send_buttons :onclick=>"Element.show('progress')" %></td>
