--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -7,6 +7,19 @@
     label.error { float: none; color: red; padding-left: .5em; vertical-align: top; }
   </style>
 
+<script type="text/javascript">
+    // define custom validation function for SMTP server validation
+    jQuery.validator.addMethod("smtp_server", function(value, element) {
+      return this.optional(element)
+        // FQDN: http://regexlib.com/REDetails.aspx?regexp_id=391
+        || /^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}$/.test(value)
+        // IPv4: http://regexlib.com/REDetails.aspx?regexp_id=32
+        || /^(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9])\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[1-9]|0)\.(25[0-5]|2[0-4][0-9]|[0-1]{1}[0-9]{2}|[1-9]{1}[0-9]{1}|[0-9])$/.test(value);
+
+    }, "<%= _("Enter a valid domain name or an IP address.") -%>");
+
+ </script>
+
   <script type="text/javascript">
      $(document).ready(function(){
 	$("#mailForm").validate()
@@ -25,7 +38,7 @@
   <%= f.error_messages %>
     <tr class="bg">
 	<td class="first"><strong><%=_("SMTP server address")%></strong></td>
-	<td class="last"><%= f.text_field :smtp_server, :disabled => disabled %></td>
+	<td class="last"><%= f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("Transport Layer Security")%></strong></td>
