use human readable names for TLS settings

--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -41,8 +41,8 @@
 	<td class="last"><%= f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></td>
     </tr>
     <tr class="bg">
-	<td class="first"><strong><%=_("Transport Layer Security")%></strong></td>
-	<td class="last"><%= f.select :transport_layer_security, [ "NONE", "MAY", "MUST"], :disabled => disabled %></td>
+	<td class="first"><strong><%=_("Transport Layer Security (TLS)")%></strong></td>
+	<td class="last"><%= f.select :transport_layer_security, [ [_("Disabled"), "NONE" ], [_("If available"), "MAY"], [_("Always"), "MUST"]], :disabled => disabled %></td>
     </tr>
     <tr class="bg">
 	<td class="first"><strong><%=_("User name")%></strong></td>
