--- a/plugins/eulas/app/views/eulas/show.html.erb
+++ b/plugins/eulas/app/views/eulas/show.html.erb
@@ -1,23 +1,38 @@
-<h1><%=_("Accept End User Licence Agreement")-%> - <%= @license.name -%></h1><br/>
+<h1><%=_("Accept End User Licence Agreement")-%> - <%= @eula.name -%></h1><br/>
 
-<table>
-<tr>
-  <td>Accepted?</td>
-  <td><%= @license.accepted.to_s -%></td>
-</tr>
-<tr>
-  <td>Only show?</td>
-  <td><%= @license.only_show.to_s -%></td>
-</tr>
-<tr>
-  <td>Available translations:</td>
-  <td><%= @license.langs_list.collect{ |lang| link_to lang, :only_path => :true, :controller => "eulas", :action => :show, :id => @id, :params => {:lang => lang} }.join(", ")  -%></td>
-</tr>
-<tr>
-  <td>Current translation:</td>
-  <td><%= @license.text_lang -%></td>
-</tr>
-</table>
-<pre>
-<%= @license.text -%>
-</pre>
+<% form_tag :method => :post, :controller => :eulas, :action => :update, :id => @eula_id, :class => 'container' do  -%>
+  <%= _("Available translations:") -%>
+<!--
+                 :onchange => remote_function(:update => "eula-text",
+                                              :url => {:id => @eula_id, :action => :show_text},
+                                              :with => "'lang='+value")
+
+                 :onchange => remote_function(:url => {:id => @eula_id, :action => :update_text},
+                                              :with => "'lang='+value")
+-->
+  <%= select_tag "text_lang",
+                 options_for_select(@eula.available_langs, :selected => @eula.text_lang),
+                 :onchange => "location.href='" + (url_for :controller => "eulas", :id => @eula_id, :action => :show) + "?eula_lang=' + value"
+      %>
+
+  <br/>
+  <textarea "eula-text" cols="90" rows="30" readonly>
+  <%= @eula.text -%>
+  </textarea>
+  <br/>
+  <% if @eula.only_show then -%>
+    <input type="hidden" name="accepted" value="true"/>
+  <% else -%>
+    <input type="radio" name="accepted" value="true">
+    <%= _("Yes, I agree to the license agreement.") %>
+    <br/>
+    <input type="radio" checked="checked" name="accepted" value="false">
+    <%= _("No, I do not agree.") %>
+    <br/>
+  <% end -%>
+  <% unless @eula.text_lang == 'en' then %>
+    <input type="hidden" name="eula_lang" value="<%= @eula.text_lang %>"/>
+  <% end %>
+
+  <%= form_send_buttons( {:disabled => false} ) %>
+<% end -%>
