--- a/webclient/app/views/hosts/index.html.erb
+++ b/webclient/app/views/hosts/index.html.erb
@@ -23,7 +23,7 @@
           </li>
           <li>
             <%= link_to image_tag("/images/delete.png", :alt =>  "delete"),
-                host, :confirm => _("Really delete host #{host.name} ?"), :method => :delete %>
+                host, :confirm => _("Really delete host %s ?") % host.name, :method => :delete %>
           </li>
         </ul>
       </li>
