--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -31,6 +31,11 @@
       return true;
     }, "<%= _("Enter a valid e-mail address.") -%>");
 
+    // disable global onsubmit validation, the relevant fields are validated explicitly in onclick handlers
+    $(document).ready(function() {
+	$("#adminForm").validate({onsubmit: false})
+    });
+
  </script>
 
 <% end %>
@@ -58,7 +63,7 @@
 	<td><%= f.submit _("Save"), :name => "save_aliases", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_aliases');", :class=>'cancel' %></td>
     </tr>
     <tr>
-    <td><%= form_send_buttons :onclick=>"return $('#adminForm').validate();" %></td>
+    <td><%= form_send_buttons :onclick=>"a = $('#adminForm').validate().element('#administrator_aliases'); b = $('#adminForm').validate().element('#administrator_confirm_password'); return a && b;" %></td>
     </tr>
   </table>
   <% end %>
