* unified look and fiel of form buttons * Missing: please use an unified helper for buttons; e.g. form_send_buttons

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -142,7 +142,8 @@
     </table>
   </div>
 
-<%= n.submit _("Update"), :disabled => write_disabled %><a href="/" class="button"><%=_("Back")%></a>
+<%= n.submit _("Save"), :disabled => write_disabled, :class => "button" %> or <a href="/"><%=_("Cancel")%></a>
+
 <% end %>
 </div>
 <% javascript_tag do -%>
