--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -89,7 +89,7 @@
         <input type="radio" name="timeconfig" value="manual" onclick="enable();" id="timeconfig_manual"/>
         <%=_("Manually configure time")%>
         <input type="radio" name="timeconfig" value="ntp_sync" onclick="disable();"/>
-        <%=_("Synchronize via NTP")%>
+        <%=_("Synchronize via Network Time Protocol")%>
       </div>
       <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
       %>
