--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -88,14 +88,14 @@
   <div class="table">
     <table class="list" cellpadding="0" cellspacing="0">
     <tr>
- 	<th class="full" colspan="2"><%=_("IP Address")%></th>
+ 	<th class="full" colspan="2"><%=_("IP address")%></th>
     </tr>
     <tr>
-	<td class="first" width="120"><strong><%=_("Configuration Mode")%></strong></td>
+	<td class="first" width="120"><strong><%=_("Configuration mode")%></strong></td>
 	<td class="last"><%= select_tag(:conf_mode, options_for_select(@conf_modes, @conf_mode), :disabled => write_disabled)%></td>
     </tr>
     <tr>
-	<td class="first" width="120"><strong><%=_("IP Address")%></strong></td>
+	<td class="first" width="120"><strong><%=_("IP address")%></strong></td>
 	<td class="last"><%=text_field_tag :ip, @ip, :disabled => static_disabled %></td>
     </tr>
     <tr>
@@ -119,11 +119,11 @@
 	<td class="last"><%=text_field_tag :domain, @domain, :disabled => write_disabled %></td>
     </tr>
     <tr>
-	<td class="first" width="120"><strong><%=_("Name Servers")%></strong></td>
+	<td class="first" width="120"><strong><%=_("Name servers")%></strong></td>
 	<td class="last"><%=text_field_tag :nameservers, @nameservers.join(" "), :disabled => static_disabled %></td>
     </tr>
     <tr>
-	<td class="first" width="120"><strong><%=_("Search Domains")%></strong></td>
+	<td class="first" width="120"><strong><%=_("Search domains")%></strong></td>
 	<td class="last"><%=text_field_tag :searchdomains, @searchdomains.join(" "), :disabled => static_disabled %></td>
     </tr>
 
@@ -136,7 +136,7 @@
  	<th class="full" colspan="2"><%=_("Routing")%></th>
     </tr>
     <tr>
-	<td class="first" width="120"><strong><%=_("Default Route")%></strong></td>
+	<td class="first" width="120"><strong><%=_("Default route")%></strong></td>
 	<td class="last"><%=text_field_tag :default_route, @default_route, :disabled => static_disabled %></td>
     </tr>
     </table>
