Fixed capitalization in language module

--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -7,7 +7,7 @@
   <table summary="<%= _("This table gives language settings description and current value for it") %>">
   <tr><td colspan="2" class="full" align="center"><strong> <%=_("Settings")%></strong></td></tr>
   <tr>
-    <td class="first"><%=_("First Language")%></td>
+    <td class="first"><%=_("First language")%></td>
     <td>
       <%= select_tag :first_language, options_for_select(@valid||[], @current||""),
             :disabled=>!@permissions[:write] %>
