--- a/webclient/app/views/shared/exception_trap.html.erb
+++ b/webclient/app/views/shared/exception_trap.html.erb
@@ -13,7 +13,7 @@ $(document).ready(function() {
 
 <p><pre>
   <%= if error.kind_of? ActiveResource::ConnectionError
-    _("Problem occure on target machine")
+    _("Problem occured on target machine")
     else
     h error.to_s
     end%>
